tests/toy/neg/001200_mutation.toylang
program a = { program a do sleep; } .
